[package]
name = "agw"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Thomas Habets <thomas@habets.se>"]
# readme = "README.md"
repository = "https://github.com/ThomasHabets/rustradio"
description = "AGW protocol implementation"
keywords = ["radio"]

[dependencies]
anyhow = "1.0.81"
log = "0.4.21"

[dev-dependencies]
stderrlog = "0.6.0"
clap = { version = "4.5.3", features = ["derive"] }

[lib]
name = "agw"
path = "src/lib.rs"
