[package]
name = "agw"
version = "0.1.9"
edition = "2021"
license = "MIT"
authors = ["Thomas Habets <thomas@habets.se>"]
readme = "README.md"
repository = "https://github.com/ThomasHabets/agw"
description = "AGW protocol implementation"
keywords = ["radio"]

[dependencies]
anyhow = "1.0.81"
crossbeam-channel = "0.5.12"
log = "0.4.21"

[dev-dependencies]
cursive = "0.20.0"
clap = { version = "4.5.3", features = ["derive"] }
env_logger = "0.11.3"
stderrlog = "0.6.0"
backtrace = "0.3.71"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
chrono = { version = "0.4.37", features = ["serde"] }
tokio-rustls = "0.26.0"
tokio = { version = "1.37.0", features = ["full"] }
rustls-pemfile = "2.1.2"

[lib]
name = "agw"
path = "src/lib.rs"

[profile.release]
overflow-checks = true
