[package]
name = "agw"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Thomas Habets <thomas@habets.se>"]
readme = "README.md"
repository = "https://github.com/ThomasHabets/agw"
description = "AGW protocol implementation"
keywords = ["radio"]

[dependencies]
crossbeam-channel = "0.5.12"
log = "0.4.21"
tokio = { version = "1.37.0", features = ["full"] }
libc = "0.2.155"
thiserror = "2.0.18"
regex = "1.12.3"

[build-dependencies]
cc = "1.1.7"

[features]
crypto=[]
native=[]

[dev-dependencies]
cursive = "0"
clap = { version = "4.5.3", features = ["derive"] }
env_logger = "0.11.3"
stderrlog = "0.6.0"
backtrace = "0.3.71"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
chrono = { version = "0.4.37", features = ["serde"] }
tokio-rustls = "0.26.4"
tokio = { version = "1.37.0", features = ["full"] }
rustls-pemfile = "2.1.2"
anyhow = "1.0.102"

[lib]
name = "agw"
path = "src/lib.rs"

[profile.release]
overflow-checks = true
